--- a/Cohiba/Cohiba.vcxproj
+++ b/Cohiba/Cohiba.vcxproj
@@ -175,20 +175,27 @@
     <ClInclude Include="App.h" />
     <ClInclude Include="CZeeGrid.h" />
     <ClInclude Include="Dbconn.h" />
+    <ClInclude Include="dbsettings.h" />
     <ClInclude Include="DlgArticoli.h" />
+    <ClInclude Include="dlgsettings.h" />
     <ClInclude Include="GridArticoli.h" />
+    <ClInclude Include="ipaddress.h" />
     <ClInclude Include="Mainfrm.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="View.h" />
+    <ClInclude Include="wc_to_mb.h" />
     <ClInclude Include="zeegrid.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="CZeeGrid.cpp" />
+    <ClCompile Include="dbsettings.cpp" />
     <ClCompile Include="DlgArticoli.cpp" />
+    <ClCompile Include="dlgsettings.cpp" />
     <ClCompile Include="GridArticoli.cpp" />
+    <ClCompile Include="ipaddress.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Dbconn.cpp" />
     <ClCompile Include="Mainfrm.cpp" />
@@ -199,6 +206,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="View.cpp" />
+    <ClCompile Include="wc_to_mb.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Cohiba.rc" />
