--- a/Cohiba/Cohiba.vcxproj.filters
+++ b/Cohiba/Cohiba.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="ipaddress.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="articolo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -102,6 +105,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ipaddress.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="articolo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
