--- a/Cohiba/Cohiba.vcxproj.filters
+++ b/Cohiba/Cohiba.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="gridvociordine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="magazzino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -144,6 +147,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="gridvociordine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="magazzino.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
